--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -52,9 +52,12 @@
         android:title="@string/power_menu_title"
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
-    <PreferenceCategory
+    <PreferenceCategory>
+
+    <PreferenceScreen
         android:key="navigation_bar"
-        android:title="@string/navigation_bar_title">
+        android:fragment="com.android.settings.cyanogenmod.NavigationBar"
+        android:title="@string/combined_navigation_bar_title" />
 
         <PreferenceScreen
             android:key="nav_buttons_edit"
