--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -994,6 +994,7 @@
     <string-array name="entries_status_bar_battery">
         <item>Icon (default)</item>
         <item>Percentage</item>
+        <item>Circle</item>
         <item>Hidden</item>
     </string-array>
 
@@ -1001,6 +1002,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
      <string-array name="entries_status_bar_signal" translatable="false">
