--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1008,6 +1008,12 @@
         <item>Percentage</item>
         <item>Circle</item>
         <item>Hidden</item>
+    <string-array name="entries_status_bar_battery" translatable="false">
+        <item>@string/status_bar_battery_status_icon</item>
+        <item>@string/status_bar_battery_status_percentage</item>
+        <item>@string/status_bar_battery_status_circle</item>
+        <item>@string/status_bar_battery_status_circle_percentage</item>
+        <item>@string/status_bar_battery_status_hidden</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
@@ -1015,6 +1021,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
      <string-array name="entries_status_bar_signal" translatable="false">
