Revert "Add CmCircleBattery to StatusBar options (2/2)"
This reverts commit 52fb1ad038009275fc5e4e0a281bf9ef29e86dbe.

--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -367,6 +367,11 @@
         <item>Klein</item>
         <item>Geen (standaard)</item>
     </string-array>
+    <string-array name="entries_status_bar_battery">
+        <item>Icoon (standaard)</item>
+        <item>Percentage</item>
+        <item>Verborgen</item>
+    </string-array>
     <string-array name="profile_entries">
         <item>Aan</item>
         <item>Uit</item>
