--- a/res/values-fi/arrays.xml
+++ b/res/values-fi/arrays.xml
@@ -369,6 +369,11 @@
     <item>Pieni</item>
     <item>Ei käytössä (oletus)</item>
   </string-array>
+  <string-array name="entries_status_bar_battery">
+    <item>Ikoni (oletus)</item>
+    <item>Prosentti</item>
+    <item>Piilotettu</item>
+  </string-array>
   <string-array name="profile_entries">
     <item>Päällä</item>
     <item>Pois</item>
