--- a/res/values-hu/arrays.xml
+++ b/res/values-hu/arrays.xml
@@ -381,6 +381,12 @@
     <item>Elrejtés (alapbeállítás)</item>
   </string-array>
 
+  <string-array name="entries_status_bar_battery">
+    <item>Ikon (alapbeállítás)</item>
+    <item>Százalék</item>
+    <item>Elrejtés</item>
+  </string-array>
+
   <!-- Profile mode options. -->
   <string-array name="profile_entries">
     <item>Be</item>
